20230515 Home Review Spring Boot

--- a/Programming/SpringBoot/[박응용] 점프투스프링부트.md
+++ b/Programming/SpringBoot/[박응용] 점프투스프링부트.md
@@ -250,6 +250,18 @@ public interface QuestionRepository extends JpaRepository<Question, Integer> {
         assertEquals(1, q.getId());
 ```
 
+|항목|예제|설명|
+|---|---|---|
+|And|findBySubjectAndContent(String subject, String content)|여러 컬럼을 and 로 검색|
+|Or|findBySubjectOrContent(String subject, String content)|여러 컬럼을 or 로 검색|
+|Between|findByCreateDateBetween(LocalDateTime fromDate, LocalDateTime toDate)|컬럼을 between으로 검색|
+|LessThan|findByIdLessThan(Integer id)|작은 항목 검색|
+|GreaterThanEqual|findByIdGraterThanEqual(Integer id)|크거나 같은 항목 검색|
+|Like|findBySubjectLike(String subject)|like 검색|
+|In|findBySubjectIn(String[] subjects)|여러 값중에 하나인 항목 검색|
+|OrderBy|findBySubjectOrderByCreateDateAsc(String subject)|검색 결과를 정렬하여 전달|
+
+
 #### findBySubjectAndContent
 ```java QuestionRepository.java
 public interface QuestionRepository extends JpaRepository<Question, Integer> {
@@ -618,7 +630,421 @@ public class QuestionController {
 </form>
 ```
 
+### 답변 컨트롤러 만들기
+```java ~ AnswerController.java
+@RequestMapping("/answer")
+@RequiredArgsConstructor
+@Controller
+public class AnswerController {
+
+    private final QuestionService questionService;
+    private final AnswerService answerService;
+
+    @PostMapping("/create/{id}")
+    public String createAnswer(Model model, @PathVariable("id") Integer id, @RequestParam String content) {
+        Question question = this.questionService.getQuestion(id);
+        this.answerService.create(question, content);
+        return String.format("redirect:/question/detail/%s", id);
+    }
+}
+```
+
+### 답변 저장하기
+```java ~ AnswerService.java
+@RequiredArgsConstructor
+@Service
+public class AnswerService {
+
+    private final AnswerRepository answerRepository;
+
+
+    public void create(Question question, String content) {
+        Answer answer = new Answer();
+        answer.setContent(content);
+        answer.setCreateDate(LocalDateTime.now());
+        answer.setQuestion(question);
+        this.answerRepository.save(answer);
+    }
+}
+```
+
+### 질문 상세 페이지에 답변 표시하기
+```html ~ question_detail.html
+<h1 th:text="${question.subject}"></h1>
+<div th:text="${question.content}"></div>
+<h5 th:text="|${#lists.size(question.answerList)}개의 답변이 있습니다.|"></h5>
+<div>
+    <ul>
+        <li th:each="answer : ${question.answerList}" th:text="${answer.content}"></li>
+    </ul>
+</div>
+```
+
+## 2-12 스태틱 디렉터리와 스타일시트
+
+### 스태틱(static) 디렉터리
+> /sbb/src/main/resources/static
+
+### 스타일시트
+```css ~ style.css
+textarea {
+    width:100%;
+}
+
+input[type=submit] {
+    margin-top:10px;
+}
+```
+
+### 템플릿에 스타일 적용
+```html ~ question_detail.html
+<link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+```
+
+## 2-13 부트스트랩
+> 부트스트랩 다운로드(버전 5) - https://getbootstrap.com/docs/5.2/getting-started/download/
+
+- /sbb/src/main/resources/static/bootstrap.min.css
+
+### 부트스트랩 적용
+```html ~ question_list.html
+<link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
+<div class="container my-3">
+    <table class="table">
+        <thead class="table-dark">
+            <tr>
+                <th>번호</th>
+                <th>제목</th>
+                <th>작성일시</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="question, loop : ${questionList}">
+                <td th:text="${loop.count}"></td>
+                <td>
+                    <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
+                </td>
+                <td th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+```
+
+```html ~ question_detail.html
+<link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
+<div class="container my-3">
+    <!-- 질문 -->
+    <h2 class="border-bottom py-2" th:text="${question.subject}"></h2>
+    <div class="card my-3">
+        <div class="card-body">
+            <div class="card-text" style="white-space: pre-line;" th:text="${question.content}"></div>
+            <div class="d-flex justify-content-end">
+                <div class="badge bg-light text-dark p-2 text-start">
+                    <div th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 답변의 갯수 표시 -->
+    <h5 class="border-bottom my-3 py-2" 
+        th:text="|${#lists.size(question.answerList)}개의 답변이 있습니다.|"></h5>
+    <!-- 답변 반복 시작 -->
+    <div class="card my-3" th:each="answer : ${question.answerList}">
+        <div class="card-body">
+            <div class="card-text" style="white-space: pre-line;" th:text="${answer.content}"></div>
+            <div class="d-flex justify-content-end">
+                <div class="badge bg-light text-dark p-2 text-start">
+                    <div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 답변 반복 끝  -->
+    <!-- 답변 작성 -->
+    <form th:action="@{|/answer/create/${question.id}|}" method="post" class="my-3">
+        <textarea name="content" id="content" rows="10" class="form-control"></textarea>
+        <input type="submit" value="답변등록" class="btn btn-primary my-2">
+    </form>
+</div>
+```
+- 부트스트랩 card 컴포넌트 : https://getbootstrap.com/docs/5.2/components/card/
+
+- 질문 상세 템플릿에 사용한 부트스트랩 클래스 정리
+
+    |부트스트랩 클래스|설명|
+    |---|---|
+    |card, card-body, card-text|부트스트랩 Card 컴포넌트|
+    |badge|부트스트랩 Badge 컴포넌트|
+    |form-control|부트스트랩 Form 컴포넌트|
+    |border-bottom|아래방향 테두리 선|
+    |my-3|상하 마진값 3|
+    |py-2|상하 패딩값 2|
+    |p-2|상하좌우 패딩값 2|
+    |d-flex justify-content-end|컴포넌트의 우측 정렬|
+    |bg-light|연회색 배경|
+    |text-dark|검은색 글씨|
+    |text-start|좌측 정렬|
+    |btn btn-primary|부트스트랩 버튼 컴포넌트|
+
+
+## 2-14 템플릿 상속
+
+### 표준 HTML 구조
+
+### 템플릿 상속
+
+#### layout.html
+```html
+<!doctype html>
+<html lang="ko">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
+    <!-- sbb CSS -->
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+    <title>Hello, sbb!</title>
+</head>
+<body>
+<!-- 기본 템플릿 안에 삽입될 내용 Start -->
+<th:block layout:fragment="content"></th:block>
+<!-- 기본 템플릿 안에 삽입될 내용 End -->
+</body>
+</html>
+```
+
+#### uestion_list.html
+```html
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container my-3">
+    <table class="table">
+        (... 생략 ...)
+    </table>
+</div>
+</html>
+```
+
+## 2-15 질문 등록과 폼
+### 질문 등록
+---
+
+```html
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container my-3">
+    <table class="table">
+        (... 생략 ...)
+    </table>
+    <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
+</div>
+</html>
+```
+
+#### URL 매핑
+```java ~ QuestionController.java
+public class QuestionController {
+
+    (... 생략 ...)
+
+    @GetMapping("/create")
+    public String questionCreate() {
+        return "question_form";
+    }
+}
+```
+
+#### 템플릿
+```html ~ question_form.html
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container">
+    <h5 class="my-3 border-bottom pb-2">질문등록</h5>
+    <form th:action="@{/question/create}" method="post">
+        <div class="mb-3">
+            <label for="subject" class="form-label">제목</label>
+            <input type="text" name="subject" id="subject" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="content" class="form-label">내용</label>
+            <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+        </div>
+        <input type="submit" value="저장하기" class="btn btn-primary my-2">
+    </form>
+</div>
+</html>
+```
+
+```java ~ QuestionController.java
+public class QuestionController {
+
+    (... 생략 ...)
+
+    @GetMapping("/create")
+    public String questionCreate() {
+        return "question_form";
+    }
+
+    @PostMapping("/create")
+    public String questionCreate(@RequestParam String subject, @RequestParam String content) {
+        this.questionService.create(subject, content);
+        return "redirect:/question/list"; // 질문 저장후 질문목록으로 이동
+    }
+}
+```
+<br>
+
+#### 서비스
+```java
+public class QuestionService {
+
+    (... 생략 ...)
+
+    public void create(String subject, String content) {
+        Question q = new Question();
+        q.setSubject(subject);
+        q.setContent(content);
+        q.setCreateDate(LocalDateTime.now());
+        this.questionRepository.save(q);
+    }
+}
+```
+<br>
 
 
 
+### 폼(form)
+---
 
+#### Spring Boot Validation
+``` build.gradle
+dependencies {
+    (... 생략 ...)
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+}
+```
+"Spring Boot Validation"을 설치하면 다음과 같은 애너테이션들을 사용하여 입력 값을 검증
+|항목|설명|
+|---|---|
+|@Size|문자 길이를 제한한다.|
+|@NotNull|Null을 허용하지 않는다.|
+|@NotEmpty|Null 또는 빈 문자열("")을 허용하지 않는다.|
+|@Past|과거 날짜만 가능|
+|@Future|	미래 날짜만 가능|
+|@FutureOrPresent|	미래 또는 오늘날짜만 가능|
+|@Max|	최대값|
+|@Min|	최소값|
+|@Pattern|	정규식으로 검증|
+
+보다 많은 기능은 다음의 URL을 참고하도록 하자.
+
+- https://beanvalidation.org/
+
+#### 폼 클래스
+화면에서 전달되는 입력 값을 검증하기 위해서는 폼 클래스가 필요하다. 화면의 입력항목 subject, content에 대응하는 QuestionForm 클래스를 다음과 같이 작성하자.
+> 폼 클래스는 입력 값의 검증에도 사용하지만 화면에서 전달한 입력 값을 바인딩할 때에도 사용한다.
+```java ~ QuestionForm.java
+@Getter
+@Setter
+public class QuestionForm {
+    @NotEmpty(message="제목은 필수항목입니다.")
+    @Size(max=200)
+    private String subject;
+
+    @NotEmpty(message="내용은 필수항목입니다.")
+    private String content;
+}
+```
+
+#### 컨트롤러
+그리고 위에서 작성한 QuestionForm을 컨트롤러에서 사용할 수 있도록 다음과 같이 컨트롤러를 수정
+```java
+public class QuestionController {
+
+    (... 생략 ...)
+
+    @PostMapping("/create")
+    @public String questionCreate(Valid QuestionForm questionForm, BindingResult bindingResult) {
+        if (bindingResult.hasErrors()) {
+            return "question_form";
+        }
+        this.questionService.create(questionForm.getSubject(), questionForm.getContent());
+        return "redirect:/question/list";
+    }
+}
+```
+questionCreate 메서드의 매개변수를 subject, content 대신 QuestionForm 객체로 변경했다. subject, content 항목을 지닌 폼이 전송되면 QuestionForm의 subject, content 속성이 자동으로 바인딩 된다. 이것은 스프링 프레임워크의 바인딩 기능이다.
+
+그리고 QuestionForm 매개변수 앞에 @Valid 애너테이션을 적용했다. @Valid 애너테이션을 적용하면 QuestionForm의 @NotEmpty, @Size 등으로 설정한 검증 기능이 동작한다. 그리고 이어지는 BindingResult 매개변수는 @Valid 애너테이션으로 인해 검증이 수행된 결과를 의미하는 객체이다.
+> BindingResult 매개변수는 항상 @Valid 매개변수 바로 뒤에 위치해야 한다. 만약 2개의 매개변수의 위치가 정확하지 않다면 @Valid만 적용이 되어 입력값 검증 실패 시 400 오류가 발생한다.
+
+따라서 questionCreate 메서드는 bindResult.hasErrors()를 호출하여 오류가 있는 경우에는 다시 폼을 작성하는 화면을 렌더링하게 했고 오류가 없을 경우에만 질문 등록이 진행되도록 했다.
+
+여기까지 수정하고 질문 등록 화면에서 아무런 값도 입력하지 말고 "저장하기" 버튼을 눌러보자. 아무런 입력값도 입력하지 않았기 때문에 QuestionForm의 @NotEmpty에 의해 Validation이 실패하여 다시 질문 등록 화면에 머물러 있을 것이다. 하지만 QuestionForm에 설정한 "제목은 필수항목입니다." 와 같은 오류 메시지는 보이지 않는다.
+
+#### 템플릿
+```html ~ question_form.html
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container">
+    <h5 class="my-3 border-bottom pb-2">질문등록</h5>
+    <form th:action="@{/question/create}" th:object="${questionForm}" method="post">
+        <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+            <div th:each="err : ${#fields.allErrors()}" th:text="${err}" />
+        </div>
+        <div class="mb-3">
+            <label for="subject" class="form-label">제목</label>
+            <input type="text" name="subject" id="subject" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="content" class="form-label">내용</label>
+            <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+        </div>
+        <input type="submit" value="저장하기" class="btn btn-primary my-2">
+    </form>
+</div>
+</html>
+```
+<br>
+QuestionController의 GetMapping으로 매핑한 메서드도 다음과 같이 변경해야 한다. 왜냐하면 question_form.html 템플릿은 "질문 등록하기" 버튼을 통해 GET 방식으로 요청되더라도 th:object에 의해 QuestionForm 객체가 필요하기 때문이다.
+
+```java
+public class QuestionController {
+
+    (... 생략 ...)
+
+    @GetMapping("/create")
+    public String questionCreate(QuestionForm questionForm) {
+        return "question_form";
+    }
+
+    (... 생략 ...)
+}
+```
+
+#### 오류 발생시 입력한 내용 유지하기
+```html ~ question_form.html
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container">
+    <h5 class="my-3 border-bottom pb-2">질문등록</h5>
+    <form th:action="@{/question/create}" th:object="${questionForm}" method="post">
+        <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+            <div th:each="err : ${#fields.allErrors()}" th:text="${err}" />
+        </div>
+        <div class="mb-3">
+            <label for="subject" class="form-label">제목</label>
+            <input type="text" th:field="*{subject}" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="content" class="form-label">내용</label>
+            <textarea th:field="*{content}" class="form-control" rows="10"></textarea>
+        </div>
+        <input type="submit" value="저장하기" class="btn btn-primary my-2">
+    </form>
+</div>
+</html>
+```
+name="subject", name="content"와 같이 사용하던 부분을 위와 같이 th:field 속성을 사용하도록 변경하였다. 이렇게 하면 해당 태그의 id, name, value 속성이 모두 자동으로 생성되고 타임리프가 value 속성에 기존 값을 채워 넣어 오류가 발생하더라도 기존에 입력한 값이 유지된다.\
+<br>
+
+### 답변 등록
+---
