--- a/Programming/SpringBoot/[박응용] 점프투스프링부트.md
+++ b/Programming/SpringBoot/[박응용] 점프투스프링부트.md
@@ -1043,8 +1043,70 @@ public class QuestionController {
 </div>
 </html>
 ```
-name="subject", name="content"와 같이 사용하던 부분을 위와 같이 th:field 속성을 사용하도록 변경하였다. 이렇게 하면 해당 태그의 id, name, value 속성이 모두 자동으로 생성되고 타임리프가 value 속성에 기존 값을 채워 넣어 오류가 발생하더라도 기존에 입력한 값이 유지된다.\
+name="subject", name="content"와 같이 사용하던 부분을 위와 같이 th:field 속성을 사용하도록 변경하였다. 이렇게 하면 해당 태그의 id, name, value 속성이 모두 자동으로 생성되고 타임리프가 value 속성에 기존 값을 채워 넣어 오류가 발생하더라도 기존에 입력한 값이 유지된다.
 <br>
 
 ### 답변 등록
 ---
+
+```java
+@Getter
+@Setter
+public class AnswerForm {
+    @NotEmpty(message = "내용은 필수항목입니다.")
+    private String content;
+}
+```
+```java
+public class AnswerController {
+
+    (... 생략 ...)
+
+    @PostMapping("/create/{id}")
+    public String createAnswer(Model model, @PathVariable("id") Integer id, 
+            @Valid AnswerForm answerForm, BindingResult bindingResult) {
+        Question question = this.questionService.getQuestion(id);
+        if (bindingResult.hasErrors()) {
+            model.addAttribute("question", question);
+            return "question_detail";
+        }
+        this.answerService.create(question, answerForm.getContent());
+        return String.format("redirect:/question/detail/%s", id);
+    }
+}
+```
+
+```html
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container my-3">
+
+    (... 생략 ...)
+    <!-- 답변 작성 -->
+    <form th:action="@{|/answer/create/${question.id}|}" th:object="${answerForm}" method="post" class="my-3">
+        <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+            <div th:each="err : ${#fields.allErrors()}" th:text="${err}" />
+        </div>
+        <textarea th:field="*{content}" rows="10" class="form-control"></textarea>
+        <input type="submit" value="답변등록" class="btn btn-primary my-2">
+    </form>
+</div>
+</html>
+```
+
+```java
+public class QuestionController {
+
+    (... 생략 ...)
+
+    @GetMapping(value = "/detail/{id}")
+    public String detail(Model model, @PathVariable("id") Integer id, AnswerForm answerForm) {
+        (... 생략 ...)
+    }
+
+    (... 생략 ...)
+}
+```
+
+
+
+
