--- a/Programming/SpringBoot/[박응용] 점프투스프링부트.md
+++ b/Programming/SpringBoot/[박응용] 점프투스프링부트.md
@@ -1209,3 +1209,263 @@ class SbbApplicationTests {
     }
 }
 ```
+
+###페이징 구현하기
+---
+
+```java ~ QuestionRepository.java
+public interface QuestionRepository extends JpaRepository<Question, Integer> {
+    Question findBySubject(String subject);
+    Question findBySubjectAndContent(String subject, String content);
+    List<Question> findBySubjectLike(String subject);
+    Page<Question> findAll(Pageable pageable);
+}
+```
+
+```java ~ QuestionService.java
+public Page<Question> getList(int page) {
+        Pageable pageable = PageRequest.of(page, 10);
+        return this.questionRepository.findAll(pageable);
+}
+```
+
+```java ~ QuestionController.java
+@GetMapping("/list")
+    public String list(Model model, @RequestParam(value="page", defaultValue="0") int page) {
+        Page<Question> paging = this.questionService.getList(page);
+        model.addAttribute("paging", paging);
+        return "question_list";
+    }
+```
+http://localhost:8080/question/list?page=0 처럼 GET 방식으로 요청된 URL에서 page값을 가져오기 위해 @RequestParam(value="page", defaultValue="0") int page 매개변수가 list 메서드에 추가되었다. URL에 페이지 파라미터 page가 전달되지 않은 경우 디폴트 값으로 0이 되도록 설정했다.
+
+그리고 템플릿에 Page<Question> 객체인 paging을 전달했다. Page 객체에는 다음과 같은 속성이 있다. 다음의 속성들은 템플릿에서 페이징을 처리할 때 사용
+|항목|	설명|
+|---|---|
+|paging.isEmpty|	페이지 존재 여부 (게시물이 있으면 false, 없으면 true)|
+|paging.totalElements|	전체 게시물 개수|
+|paging.totalPages|	전체 페이지 개수|
+|paging.size|	페이지당 보여줄 게시물 개수|
+|paging.number|	현재 페이지 번호|
+|paging.hasPrevious|	이전 페이지 존재 여부|
+|paging.hasNext|	다음 페이지 존재 여부|
+
+```html ~ question_list.html
+<div layout:fragment="content" class="container my-3">
+    <table class="table">
+        (... 생략 ...)
+        <tbody>
+            <tr th:each="question, loop : ${paging}">
+                (... 생략 ...)
+            </tr>
+        </tbody>
+    </table>
+    <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
+</div>
+````
+
+### 템플릿에 페이지 이동 기능 구현하기
+---
+
+```html ~ question_list.html
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container my-3">
+    <table class="table">
+        (... 생략 ...)
+    </table>
+    <!-- 페이징처리 시작 -->
+    <div th:if="${!paging.isEmpty()}">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+                <a class="page-link"
+                    th:href="@{|?page=${paging.number-1}|}">
+                    <span>이전</span>
+                </a>
+            </li>
+            <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+                th:classappend="${page == paging.number} ? 'active'" 
+                class="page-item">
+                <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
+            </li>
+            <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+                <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+                    <span>다음</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <!-- 페이징처리 끝 -->
+    <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
+</div>
+</html>
+```
+
+이전 페이지가 없는 경우에는 "이전" 링크가 비활성화(disabled)되도록 하였다. (다음페이지의 경우도 마찬가지 방법으로 적용했다.) 그리고 페이지 리스트를 루프 돌면서 해당 페이지로 이동할 수 있는 링크를 생성하였다. 이때 루프 도중의 페이지가 현재 페이지와 같을 경우에는 active클래스를 적용하여 강조표시(선택표시)도 해 주었다.
+> 타임리프의 th:classappend="조건식 ? 클래스값" 속성은 조건식이 참인 경우 클래스값을 class 속성에 추가한다.
+
+
+- 주요 페이징 기능
+|페이징 기능|	코드|
+|---|---|---|
+|이전 페이지가 없으면 비활성화|	th:classappend="${!paging.hasPrevious} ? 'disabled'"|
+|다음 페이지가 없으면 비활성화|	th:classappend="${!paging.hasNext} ? 'disabled'"|
+|이전 페이지 링크|	th:href="@{|?page=${paging.number-1}|}"|
+|다음 페이지 링크|	th:href="@{|?page=${paging.number+1}|}"|
+|페이지 리스트 루프|	th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"|
+|현재 페이지와 같으면 active 적용|	th:classappend="${page == paging.number} ? 'active'"|
+
+> 부트스트랩 pagination - https://getbootstrap.com/docs/5.2/components/pagination/
+<br>
+
+### 페이지 리스트
+---
+
+```html ~ question_list.html
+<!-- 페이징처리 시작 -->
+<div th:if="${!paging.isEmpty()}">
+    <ul class="pagination justify-content-center">
+        <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+            <a class="page-link"
+                th:href="@{|?page=${paging.number-1}|}">
+                <span>이전</span>
+            </a>
+        </li>
+        <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}" 
+            th:if="${page >= paging.number-5 and page <= paging.number+5}"
+            th:classappend="${page == paging.number} ? 'active'" 
+            class="page-item">
+            <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
+        </li>
+        <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+            <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+                <span>다음</span>
+            </a>
+        </li>
+    </ul>
+</div>
+<!-- 페이징처리 끝 -->
+```
+
+### 작성일시 역순으로 조회하기
+---
+
+```java ~ QuestionService.java
+public Page<Question> getList(int page) {
+        List<Sort.Order> sorts = new ArrayList<>();
+        sorts.add(Sort.Order.desc("createDate"));
+        Pageable pageable = PageRequest.of(page, 10, Sort.by(sorts));
+        return this.questionRepository.findAll(pageable);
+    }
+```
+
+### 게시물 번호 공식 만들기
+---
+
+만약 질문 게시물이 12개라면 0페이지에는 12번째~3번째 게시물이, 1페이지에는 2번째~1번째 게시물이 역순으로 표시되어야 한다. 질문 게시물의 번호를 역순으로 정렬하려면 다음과 같은 공식을 적용해야 한다.
+
+> 번호 = 전체 게시물 개수 -(현재페이지 * 페이지당 게시물 개수) - 나열 인덱스
+
+|항목|	설명|
+|---|---|
+|번호|	최종 표시될 게시물 번호|
+|전체 게시물 개수|	데이터베이스에 저장된 게시물 전체 개수|
+|현재 페이지|	페이징에서 현재 선택한 페이지 (만약 페이지가 1부터 시작한다면 1을 빼주어야 한다. 하지만 스프링부트의 페이징은 0부터 시작하므로 1을 뺄 필요가 없다.)|
+|페이지당 게시물 개수|	한 페이지당 보여줄 게시물의 개수|
+|나열 인덱스|	for 문 안의 게시물 순서 (나열 인덱스는 현재 페이지에서 표시할 수 있는 게시물의 인덱스이므로 10개를 표시하는 페이지에서는 0~9, 2개를 표시하는 페이지에서는 0~1로 반복된다.)|
+<br>
+
+###게시물 번호 공식을 질문 목록 템플릿에 적용하기
+---
+
+```html ~ question_list.html
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container my-3">
+    <table class="table">
+        <thead class="table-dark">
+            (... 생략 ...)
+        </thead>
+        <tbody>
+            <tr th:each="question, loop : ${paging}">
+                <td th:text="${paging.getTotalElements - (paging.number * paging.size) - loop.index}"></td>
+                <td>
+                    <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
+                </td>
+                <td th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></td>
+            </tr>
+        </tbody>
+    </table>
+    (... 생략 ...)
+</div>
+</html>
+```
+
+템플릿에 사용한 공식의 상세 정보
+
+|항목|	설명|
+|---|---|
+|paging.getTotalElements|	전체 게시물 개수|
+|paging.number|	현재 페이지 번호|
+|paging.size|	페이지당 게시물 개수|
+|loop.index|	나열 인덱스(0부터 시작)|
+<br>
+
+## 3-04 답변 개수 표시
+---
+
+```html ~ question_list.html
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container my-3">
+    <table class="table">
+        <thead class="table-dark">
+            <tr>
+                <th>번호</th>
+                <th>제목</th>
+                <th>작성일시</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="question, loop : ${paging}">
+                <td th:text="${paging.getTotalElements - (paging.number * paging.size) - loop.index}"></td>
+                <td>
+                    <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
+                    <span class="text-danger small ms-2"
+                        th:if="${#lists.size(question.answerList) > 0}" 
+                        th:text="${#lists.size(question.answerList)}">
+                    </span>
+                </td>
+                <td th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></d>
+            </tr>
+        </tbody>
+    </table>
+(... 생략 ...)
+```
+
+> #list.size(이터러블객체)는 이터러블 객체의 사이즈를 반환하는 타임리프의 유틸리티이다.
+
+## 3-05 스프링 시큐리티
+---
+<br>
+
+## 스프링 시큐리티란?
+---
+스프링 시큐리티는 스프링 기반 애플리케이션의 인증과 권한을 담당하는 스프링의 하위 프레임워크이다.
+
+- 인증(Authenticate)은 로그인을 의미한다.
+- 권한(Authorize)은 인증된 사용자가 어떤 것을 할 수 있는지를 의미한다.
+<br>
+
+## 스프링 시큐리티 설치
+---
+
+``` build.gradle
+dependencies {
+    (... 생략 ...)
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
+}
+```
+
+### thymeleaf-extras-springsecurity6
+> thymeleaf-extras-springsecurity6 패키지를 사용하기 위해 뒤에 3.1.1.RELEASE과 같은 버전 정보를 추가했다. thymeleaf-extras-springsecurity6 패키지는 스프링부트가 자체적으로 관리하는 패키지이기 때문에 버전 정보가 필요없지만 현재 사용중인 스프링부트 버전인 3.0.0 버전에서는 위와 같은 버전 정보를 입력하지 않으면 오류가 발생한다. 만약 버전 정보를 제거하고 사용하더라도 오류가 없다면 버전 정보 없이 사용하기 바란다.
+
+
