20230730 Home Review Data Analysis

--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/1장/1.3 넘파이.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/1장/1.3 넘파이.ipynb
@@ -8,8 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "강의에 사용되는 소스 코드는 https://github.com/chulminkw/PerfectGuide "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -39,9 +46,10 @@
     "list1 = [1, 2, 3]\n",
     "print('list1 type:', type(list1))\n",
     "array1 = np.array(list1)\n",
-    "#array1 = np.array([1,2,3])\n",
+    "\n",
     "print('array1 type:',type(array1))\n",
     "print('array1 array 형태:',array1.shape)\n",
+    "\n",
     "\n",
     "array2 = np.array([[1,2,3],\n",
     "                  [2,3,4]])\n",
@@ -55,19 +63,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "array1: 1차원, array2:     1차원, array3:          1차원\n"
+      "array1: 1차원, array2: 2차원, array3:  2차원\n",
+      "array1.ndim=1차원, array2: 2차원, array3: 2차원\n"
      ]
     }
    ],
    "source": [
-    "print('array1: {:0}차원, array2: {:5}차원, array3: {:10}차원'.format(array1.ndim,array2.ndim,array3.ndim))\n"
+    "print('array1: {:0}차원, array2: {:1}차원, array3: {:2}차원'.format(array1.ndim,array2.ndim,array3.ndim))\n",
+    "print(f'{array1.ndim=}차원, array2: {array2.ndim}차원, array3: {array3.ndim}차원')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count=100,000.02\n",
+      "([0 1 2 3 4 5 6 7 8 9])\n",
+      "([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 100000.0234\n",
+    "print(f'{count=:,.2f}')\n",
+    "\n",
+    "array1 = np.arange(10);\n",
+    "array1\n",
+    "print(f'({array1})')\n",
+    "\n",
+    "print(f'({array1.tolist()})')"
    ]
   },
   {
@@ -1234,7 +1270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
