--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/2장/2.4 Model Selection 모듈 소개.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/2장/2.4 Model Selection 모듈 소개.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -75,6 +76,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -240,6 +242,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -249,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,6 +267,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import KFold\n",
+    "from sklearn.datasets import load_iris\n",
     "import numpy as np\n",
     "\n",
     "iris = load_iris()\n",
@@ -279,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -341,6 +345,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -551,6 +556,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -591,6 +597,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -868,7 +875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
