20230801 Home Review Data Analysis

--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/2장/2.5 데이터_전처리.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/2장/2.5 데이터_전처리.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 데이터 전처리\n",
     "- 데이터 클린징\n",
-    "- 결손갑 처리(Null/NaN 처리)\n",
+    "- 결손값 처리(Null/NaN 처리)\n",
     "- 데이터 인코딩(레이블, 원-핫 인코딩)\n",
     "  - ML 에서는 문자열을 처리하지 못하므로 숫자값으로 변환해야 함\n",
     "- 데이터 스케일링\n",
@@ -20,6 +20,7 @@
    "source": [
     "## 데이터 인코딩\n",
     "머신러닝 알고리즘은 문자열 데이터 속성을 입력 받지 안으며 모든 데이터는 숫자형으로 표현되어야 합니다.\n",
+    "\n",
     "문자형 카테고리형 속성은 모두 숫자값으로 변환/인코딩 되어야 합니다.\n",
     "\n",
     "- 레이블(Label) 인코딩\n",
@@ -43,7 +44,7 @@
     "    - fit()과 transform()을 이용하여 변환. 인자로 2차원 ndarray 입력 필요.\n",
     "\n",
     "      sparse 배열 형태로 변환되므로 toarray()를 적용하여 다시 Dense 형태로 변환되어야 함.\n",
-    "    - pg.get_dummies(DataFrame)을 이용 - **sk-learn이 번거로워서 pandas를 주로 이용**.\n"
+    "    - pd.get_dummies(DataFrame)을 이용 - **sk-learn이 번거로워서 pandas를 주로 이용**.\n"
    ]
   },
   {
@@ -386,6 +387,9 @@
    "metadata": {},
    "source": [
     "## 피처 스케일링\n",
+    "- 온도, 습도, 년수입, 평수 등 값의 척도가 다른 값을 균일하게 통일화. 서로 다른 feture간의 크기의 척도를 균일하게 만드는 것.\n",
+    "- \n",
+    "\n",
     "- 표준화는 데이터의 피처 각각이 평균이 0이고 분산이 1인 가우시안 정규분포를 가진 값으로 변환하는 것을 의미합니다.\n",
     "    $$ x_i\\_new = \\frac{x_i - mean(x)}{stdev(x)} $$\n",
     "\n",
@@ -395,6 +399,7 @@
     "    - 평균: 30, 표준편차: 8.16\n",
     "    \n",
     "    - 데이터 분포의 중심을 0으로(Zero-Centered)\n",
+    "    \n",
     "\n",
     "- 정규화는 서로 다른 피처의 크기를 통일하기 위해 크기를 변환해 주는 개념임.\n",
     "    $$ x_i\\_new = \\frac{x_i - min(x)}{max(x) - min(x)}, 0 과 1 사이의 값으로 변환$$\n",
@@ -414,7 +419,9 @@
    "source": [
     "## 사이킷런 피처 스케일링 지원\n",
     "- StandardScaler : 평균이 0 이고, 분산이 1 인 정규분포 형태로 변환\n",
-    "- MinMaxScaler : 데이터값을 0과 1사이의 범위 값으로 변환함 (음수 값이 있으면 -1에서 1값으로 변환함)"
+    "- MinMaxScaler : 데이터값을 0과 1사이의 범위 값으로 변환함 (음수 값이 있으면 -1에서 1값으로 변환함)\n",
+    "\n",
+    "- Linear Regression, SVM 등은 숫자의 크기에 영향을 많이 받음. Tree 계열은 크기에 영향 받지 않음"
    ]
   },
   {
@@ -769,7 +776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
