--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/3장/3.1정확도(Accuracy) ~ 3-5_ROC_AUC까지 예제.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/3장/3.1정확도(Accuracy) ~ 3-5_ROC_AUC까지 예제.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -21,6 +23,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,13 +31,13 @@
     "  $$ 정확도(Accuracy) = \\frac{예측 결과가 동일한 데이터 건수}{전체 예측 데이터 건수} $$\n",
     "  \n",
     "  - 정확도는 직관적으로 모델 예측 성능을 나타내는 평가 지표입니다. 하지만 이진 분류의 경우 데이터의 \n",
-    "  \n",
     "    구성에 따라 ML 모델의 성능을 왜곡할 수 있기 때문에 정확도 수치 하나만 가지고 성능을 평가하지 않습니다.\n",
     "  - 특히 정확도는 불균형한(imbalanced) 레이블 값 분포에서 ML 모델의 성능을 판단할 경우, 적합한 평가 지표가 아닙니다.\n",
     "    - ex) 신용카드 사기 검출 관련하여 대부분이 정상인경우 그냥 판단해도 99%가 정상으로 판별"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -45,13 +48,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 오차 행렬(Confusion Matrix) - 혼동행렬\n",
     "- 오차 행렬은 이진 분류의 예측 오류가 얼마인지와 더불어 어떠한 유형의 예측 오류가 발생하고 있는지를 함께 나타내는 지표임.\n",
     "\n",
-    "- <img src=\"../datasets/confusion_matrix.png\" width=\"800px\" height=\"300px\" title=\"Confusion Matrix\"></img>   \n",
+    "- <img src=\"../images/confusion_matrix.png\" width=\"800px\" height=\"300px\" title=\"Confusion Matrix\"></img>   \n",
     "\n",
     "- 정확도(Accuracy) = 예측 결과와 실제 값이 동일한 건수/전체 데이터 수\n",
     "\n",
@@ -59,6 +63,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -72,6 +77,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,17 +98,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 분류 결정 임계값에 따라 Positive 예측 확률 변화\n",
-    "- <img src=\"../datasets/임계값_변화.png\" width=\"800px\" height=\"300px\" title=\"분류 결정 임계값에 따라 Positive 예측 확률 변화\"></img>   \n",
+    "- <img src=\"../images/임계값_변화.png\" width=\"800px\" height=\"300px\" title=\"분류 결정 임계값에 따라 Positive 예측 확률 변화\"></img>   \n",
     "    - 분류 결정 임계값이 낮아질 수록 Positive로 예측할 확률이 높아짐. 재현율 증가 \n",
     "        - 사이킷런 Estimator 객체의 predict_proba() 메소드는 분류 결정 예측 확률을 반환함.\n",
     "        - 이를 이용하면 임의로 분류 결정 임계값을 조정하면서 예측 확률을 변결할 수 있음\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -111,6 +119,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -127,6 +136,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,6 +153,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -157,10 +168,11 @@
     "\n",
     "    - 분류의 성능 지표로 사용되는 것은 ROC 곡선 면적에 기반한 AUC값으로 결정함.\n",
     "    - AUC(Area Under Curve) 값은 ROC 곡선 밑의 면적을 구한 것으로서 **일반적으로 1에 가까울 수 록 좋은 수치**임\n",
-    "    - <img src=\"../datasets/roc.png\" width=\"400px\" height=\"400px\" title=\"ROC 곡선과 AUC\"></img> "
+    "    - <img src=\"../images/roc.png\" width=\"400px\" height=\"400px\" title=\"ROC 곡선과 AUC\"></img> "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,6 +188,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,7 +204,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.1.2\n"
+      "1.2.2\n"
      ]
     }
    ],
@@ -411,6 +424,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -442,6 +456,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -449,6 +464,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -485,6 +501,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -551,6 +568,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -558,6 +576,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -597,6 +616,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -631,6 +651,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -669,6 +690,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -702,6 +724,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -761,6 +784,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -816,6 +840,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -868,6 +893,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -949,6 +975,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
