20230907 Home JBFG Data Analysis Competition

--- a/data_analysis/2023_jbfg_competition/dataline_v1.2.ipynb
+++ b/data_analysis/2023_jbfg_competition/dataline_v1.2.ipynb
@@ -18,6 +18,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 분석 환경 - PC 사양, Lib Versions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Author: DataLine\n",
+      "\n",
+      "Python implementation: CPython\n",
+      "Python version       : 3.11.3\n",
+      "IPython version      : 8.12.0\n",
+      "\n",
+      "numpy     : 1.24.3\n",
+      "pandas    : 1.5.3\n",
+      "sklearn   : 1.2.2\n",
+      "matplotlib: 3.7.1\n",
+      "seaborn   : 0.12.2\n",
+      "plotly    : 5.9.0\n",
+      "imblearn  : 0.10.1\n",
+      "missingno : 0.5.2\n",
+      "\n",
+      "Compiler    : MSC v.1916 64 bit (AMD64)\n",
+      "OS          : Windows\n",
+      "Release     : 10\n",
+      "Machine     : AMD64\n",
+      "Processor   : Intel64 Family 6 Model 142 Stepping 10, GenuineIntel\n",
+      "CPU cores   : 8\n",
+      "Architecture: 64bit\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !pip install watermark\n",
+    "%load_ext watermark\n",
+    "%watermark -a 'DataLine' -nmv --packages numpy,pandas,sklearn,matplotlib,seaborn,plotly,imblearn,missingno"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -3495,7 +3543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
