20230907 Home JBFG Data Analysis Competition

--- a/data_analysis/2023_jbfg_competition/dataline_v1.41.ipynb
+++ b/data_analysis/2023_jbfg_competition/dataline_v1.41.ipynb
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2326,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2364,12 +2364,31 @@
     "    # x축, y축 label과 legend, 그리고 grid 설정\n",
     "    plt.xlabel('Threshold value'); plt.ylabel('Precision and Recall value')\n",
     "    plt.legend(); plt.grid()\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "\n",
+    "def roc_curve_plot(y_test , pred_proba_c1):\n",
+    "    # 임곗값에 따른 FPR, TPR 값을 반환 받음. \n",
+    "    fprs , tprs , thresholds = roc_curve(y_test ,pred_proba_c1)\n",
+    "\n",
+    "    # ROC Curve를 plot 곡선으로 그림. \n",
+    "    plt.plot(fprs , tprs, label='ROC')\n",
+    "    # 가운데 대각선 직선을 그림. \n",
+    "    plt.plot([0, 1], [0, 1], 'k--', label='Random')\n",
+    "    \n",
+    "    # FPR X 축의 Scale을 0.1 단위로 변경, X,Y 축명 설정등   \n",
+    "    start, end = plt.xlim()\n",
+    "    plt.xticks(np.round(np.arange(start, end, 0.1),2))\n",
+    "    plt.xlim(0,1); plt.ylim(0,1)\n",
+    "    plt.xlabel('FPR( 1 - Sensitivity )'); plt.ylabel('TPR( Recall )')\n",
+    "    plt.legend()\n",
+    "    plt.show()    \n",
+    "\n",
+    "# roc_curve_plot(y_test, lr_clf.predict_proba(X_test)[:, 1] )    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
