20230911 Office JBFG Data Analysis Competition

--- a/data_analysis/2023_jbfg_competition/dataline_v3.1.ipynb
+++ b/data_analysis/2023_jbfg_competition/dataline_v3.1.ipynb
@@ -408,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bank_churner_df.describe()"
+    "eda_churner_df.describe()"
    ]
   },
   {
