--- a/data_analysis/2023_jbfg_competition/temp.ipynb
+++ b/data_analysis/2023_jbfg_competition/temp.ipynb
@@ -2,6 +2,116 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting rise\n",
+      "  Downloading rise-5.7.1-py2.py3-none-any.whl (4.3 MB)\n",
+      "     ---------------------------------------- 0.0/4.3 MB ? eta -:--:--\n",
+      "     -- ------------------------------------- 0.3/4.3 MB 7.9 MB/s eta 0:00:01\n",
+      "     ------ --------------------------------- 0.7/4.3 MB 10.6 MB/s eta 0:00:01\n",
+      "     --------- ------------------------------ 1.0/4.3 MB 9.3 MB/s eta 0:00:01\n",
+      "     ------------- -------------------------- 1.4/4.3 MB 8.2 MB/s eta 0:00:01\n",
+      "     ---------------- ----------------------- 1.8/4.3 MB 8.7 MB/s eta 0:00:01\n",
+      "     ------------------- -------------------- 2.1/4.3 MB 8.4 MB/s eta 0:00:01\n",
+      "     ----------------------- ---------------- 2.5/4.3 MB 8.4 MB/s eta 0:00:01\n",
+      "     -------------------------- ------------- 2.9/4.3 MB 8.3 MB/s eta 0:00:01\n",
+      "     ----------------------------- ---------- 3.2/4.3 MB 8.2 MB/s eta 0:00:01\n",
+      "     --------------------------------- ------ 3.6/4.3 MB 8.2 MB/s eta 0:00:01\n",
+      "     ------------------------------------- -- 4.0/4.3 MB 8.2 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  4.3/4.3 MB 8.3 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 4.3/4.3 MB 7.8 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: notebook>=6.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from rise) (6.5.3)\n",
+      "Requirement already satisfied: argon2-cffi in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (21.3.0)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (2.11.3)\n",
+      "Requirement already satisfied: nbformat in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (5.7.0)\n",
+      "Requirement already satisfied: jupyter-core>=4.6.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (5.3.0)\n",
+      "Requirement already satisfied: jupyter-client>=5.3.4 in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (7.4.9)\n",
+      "Requirement already satisfied: traitlets>=4.2.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (5.7.1)\n",
+      "Requirement already satisfied: tornado>=6.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (6.2)\n",
+      "Requirement already satisfied: ipython-genutils in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (0.2.0)\n",
+      "Requirement already satisfied: nest-asyncio>=1.5 in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (1.5.6)\n",
+      "Requirement already satisfied: Send2Trash>=1.8.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (1.8.0)\n",
+      "Requirement already satisfied: nbconvert>=5 in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (6.1.0)\n",
+      "Requirement already satisfied: pyzmq>=17 in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (23.2.0)\n",
+      "Requirement already satisfied: nbclassic>=0.4.7 in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (0.5.3)\n",
+      "Requirement already satisfied: prometheus-client in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (0.14.1)\n",
+      "Requirement already satisfied: ipykernel in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (6.19.2)\n",
+      "Requirement already satisfied: terminado>=0.8.3 in c:\\users\\user\\anaconda3\\lib\\site-packages (from notebook>=6.0->rise) (0.17.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from jupyter-client>=5.3.4->notebook>=6.0->rise) (2.8.2)\n",
+      "Requirement already satisfied: entrypoints in c:\\users\\user\\anaconda3\\lib\\site-packages (from jupyter-client>=5.3.4->notebook>=6.0->rise) (0.4)\n",
+      "Requirement already satisfied: pywin32>=300 in c:\\users\\user\\anaconda3\\lib\\site-packages (from jupyter-core>=4.6.1->notebook>=6.0->rise) (305.1)\n",
+      "Requirement already satisfied: platformdirs>=2.5 in c:\\users\\user\\anaconda3\\lib\\site-packages (from jupyter-core>=4.6.1->notebook>=6.0->rise) (2.5.2)\n",
+      "Requirement already satisfied: jupyter-server>=1.8 in c:\\users\\user\\anaconda3\\lib\\site-packages (from nbclassic>=0.4.7->notebook>=6.0->rise) (1.13.5)\n",
+      "Requirement already satisfied: notebook-shim>=0.1.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from nbclassic>=0.4.7->notebook>=6.0->rise) (0.2.2)\n",
+      "Requirement already satisfied: bleach in c:\\users\\user\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=6.0->rise) (4.1.0)\n",
+      "Requirement already satisfied: pandocfilters>=1.4.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=6.0->rise) (1.5.0)\n",
+      "Requirement already satisfied: testpath in c:\\users\\user\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=6.0->rise) (0.6.0)\n",
+      "Requirement already satisfied: defusedxml in c:\\users\\user\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=6.0->rise) (0.7.1)\n",
+      "Requirement already satisfied: pygments>=2.4.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=6.0->rise) (2.11.2)\n",
+      "Requirement already satisfied: mistune<2,>=0.8.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=6.0->rise) (0.8.4)\n",
+      "Requirement already satisfied: nbclient<0.6.0,>=0.5.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=6.0->rise) (0.5.13)\n",
+      "Requirement already satisfied: jupyterlab-pygments in c:\\users\\user\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=6.0->rise) (0.1.2)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\user\\anaconda3\\lib\\site-packages (from jinja2->notebook>=6.0->rise) (1.1.1)\n",
+      "Requirement already satisfied: fastjsonschema in c:\\users\\user\\anaconda3\\lib\\site-packages (from nbformat->notebook>=6.0->rise) (2.16.2)\n",
+      "Requirement already satisfied: jsonschema>=2.6 in c:\\users\\user\\anaconda3\\lib\\site-packages (from nbformat->notebook>=6.0->rise) (4.17.3)\n",
+      "Requirement already satisfied: pywinpty>=1.1.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from terminado>=0.8.3->notebook>=6.0->rise) (2.0.10)\n",
+      "Requirement already satisfied: argon2-cffi-bindings in c:\\users\\user\\anaconda3\\lib\\site-packages (from argon2-cffi->notebook>=6.0->rise) (21.2.0)\n",
+      "Requirement already satisfied: psutil in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipykernel->notebook>=6.0->rise) (5.9.0)\n",
+      "Requirement already satisfied: matplotlib-inline>=0.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipykernel->notebook>=6.0->rise) (0.1.6)\n",
+      "Requirement already satisfied: comm>=0.1.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipykernel->notebook>=6.0->rise) (0.1.2)\n",
+      "Requirement already satisfied: packaging in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipykernel->notebook>=6.0->rise) (23.0)\n",
+      "Requirement already satisfied: debugpy>=1.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipykernel->notebook>=6.0->rise) (1.5.1)\n",
+      "Requirement already satisfied: ipython>=7.23.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipykernel->notebook>=6.0->rise) (8.10.0)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.30 in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=7.23.1->ipykernel->notebook>=6.0->rise) (3.0.36)\n",
+      "Requirement already satisfied: stack-data in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=7.23.1->ipykernel->notebook>=6.0->rise) (0.2.0)\n",
+      "Requirement already satisfied: pickleshare in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=7.23.1->ipykernel->notebook>=6.0->rise) (0.7.5)\n",
+      "Requirement already satisfied: backcall in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=7.23.1->ipykernel->notebook>=6.0->rise) (0.2.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=7.23.1->ipykernel->notebook>=6.0->rise) (0.4.6)\n",
+      "Requirement already satisfied: decorator in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=7.23.1->ipykernel->notebook>=6.0->rise) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\user\\anaconda3\\lib\\site-packages (from ipython>=7.23.1->ipykernel->notebook>=6.0->rise) (0.18.1)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from jsonschema>=2.6->nbformat->notebook>=6.0->rise) (22.1.0)\n",
+      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from jsonschema>=2.6->nbformat->notebook>=6.0->rise) (0.18.0)\n",
+      "Collecting pywinpty>=1.1.0\n",
+      "  Downloading pywinpty-1.1.6-cp39-none-win_amd64.whl (1.4 MB)\n",
+      "     ---------------------------------------- 0.0/1.4 MB ? eta -:--:--\n",
+      "     --------- ------------------------------ 0.3/1.4 MB 10.2 MB/s eta 0:00:01\n",
+      "     ----------------- ---------------------- 0.6/1.4 MB 7.5 MB/s eta 0:00:01\n",
+      "     -------------------------- ------------- 0.9/1.4 MB 7.0 MB/s eta 0:00:01\n",
+      "     ----------------------------------- ---- 1.2/1.4 MB 6.9 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 1.4/1.4 MB 6.6 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: anyio<4,>=3.1.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from jupyter-server>=1.8->nbclassic>=0.4.7->notebook>=6.0->rise) (3.5.0)\n",
+      "Requirement already satisfied: websocket-client in c:\\users\\user\\anaconda3\\lib\\site-packages (from jupyter-server>=1.8->nbclassic>=0.4.7->notebook>=6.0->rise) (0.58.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\user\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->jupyter-client>=5.3.4->notebook>=6.0->rise) (1.16.0)\n",
+      "Requirement already satisfied: cffi>=1.0.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from argon2-cffi-bindings->argon2-cffi->notebook>=6.0->rise) (1.15.1)\n",
+      "Requirement already satisfied: webencodings in c:\\users\\user\\anaconda3\\lib\\site-packages (from bleach->nbconvert>=5->notebook>=6.0->rise) (0.5.1)\n",
+      "Requirement already satisfied: sniffio>=1.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from anyio<4,>=3.1.0->jupyter-server>=1.8->nbclassic>=0.4.7->notebook>=6.0->rise) (1.2.0)\n",
+      "Requirement already satisfied: idna>=2.8 in c:\\users\\user\\anaconda3\\lib\\site-packages (from anyio<4,>=3.1.0->jupyter-server>=1.8->nbclassic>=0.4.7->notebook>=6.0->rise) (3.4)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\user\\anaconda3\\lib\\site-packages (from cffi>=1.0.1->argon2-cffi-bindings->argon2-cffi->notebook>=6.0->rise) (2.21)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from jedi>=0.16->ipython>=7.23.1->ipykernel->notebook>=6.0->rise) (0.8.3)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\user\\anaconda3\\lib\\site-packages (from prompt-toolkit<3.1.0,>=3.0.30->ipython>=7.23.1->ipykernel->notebook>=6.0->rise) (0.2.5)\n",
+      "Requirement already satisfied: asttokens in c:\\users\\user\\anaconda3\\lib\\site-packages (from stack-data->ipython>=7.23.1->ipykernel->notebook>=6.0->rise) (2.0.5)\n",
+      "Requirement already satisfied: executing in c:\\users\\user\\anaconda3\\lib\\site-packages (from stack-data->ipython>=7.23.1->ipykernel->notebook>=6.0->rise) (0.8.3)\n",
+      "Requirement already satisfied: pure-eval in c:\\users\\user\\anaconda3\\lib\\site-packages (from stack-data->ipython>=7.23.1->ipykernel->notebook>=6.0->rise) (0.2.2)\n",
+      "Installing collected packages: pywinpty, rise\n",
+      "  Attempting uninstall: pywinpty\n",
+      "    Found existing installation: pywinpty 2.0.10\n",
+      "    Uninstalling pywinpty-2.0.10:\n",
+      "      Successfully uninstalled pywinpty-2.0.10\n",
+      "Successfully installed pywinpty-1.1.6 rise-5.7.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install rise"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
